<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Next 5</string>
    <string name="action_title_hint">Action name&#8230;</string>
	<string name="action_title_label">Title</string>
	<string name="action_details_label">Details</string>
	<string name="action_salved_label">Done?</string>
	<string name="actions_title">x950</string>
	<string name="date_picker_title">Date:</string>
	<string name="date_or_time_title">Select Date or Time</string>
	<string name="dialog_date_button">Date</string>
	<string name="dialog_time_button">Time</string>
	<string name="time_picker_title">Action Title:</string>
	<string name="new_action">New Action</string>
	<string name="show_subtitle">Show Subtitle</string>
	<string name="hide_subtitle">Hide Subtile</string>
	<string name="subtitle">Showing completed and pending actions</string>
	<string name="delete_action">Delete</string>
	<string name="dropbox_title">DB</string>
	<string name="remove_all">Remove All</string>
	<string name="toggle_completed">Toggle Comp.</string>
	<string name="minutes_to_complete">:00</string>
	<string name="context_text">Context</string>
	<string name="outcome_text">Outcome</string>
	<string name="is_completed">Completed</string>
	<string name="backup_title">Backup</string>
	<string name="dslv_app_activity">DSLV Activity</string>
	<string name="new_action_hint">Add a new subtask</string>
	<string name="toggle_detail">Toggle Detail View</string>
	<string name="next_five">Next Five View</string>
	<string name="save_toast">Action Saved.</string>
	<string name="pin_button">pin</string>
	<string name="repeat_dialogue_title">Select Repeat Interval</string>
	<string name="save_button">Save</string>
	<string name="remove_button">Remove</string>
	<string name="dropbox_dialog_title">Dropbox Options</string>
	<string name="select_filename_title">Select Filename</string>
	<string name="default_title">What\'s Next</string>
	
	<string-array
        name="repeat_intervals">
        <item>No Repetition</item>
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Month</item>
        <item>Every Year</item>
    </string-array>

    <string-array
        name="custom_repeat_intervals">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string-array name="custom_repeat_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

	<string-array
        name="dropbox_options">
        <item>Autosave Now</item>
        <item>Export to tab delimited file</item>
        <item>Import from tab delimeted file</item>
   </string-array>
	
	<string-array name="menu_titles">
        <item>Next 5</item>
        <item>Incomplete</item>
        <item>Pending</item>
        <item>Remove All</item>
        <item>Dropbox</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
	
</resources>
