<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<item 
    android:id="@+id/menu_item_detail_toggle"
    android:title="@string/toggle_detail"
    android:icon="@drawable/ic_action_expand"
    android:showAsAction="ifRoom|withText"/>
    
<item android:id="@+id/menu_item_remove_all"
    android:title="@string/remove_all"
    android:showAsAction="never"/>

<item android:id="@+id/menu_item_toggle_completed"
    android:title="@string/toggle_completed"
    android:showAsAction="never"
    />

<item android:id="@+id/menu_item_next_five"
    android:title="@string/next_five"
    android:showAsAction="never"
    />

<item android:id="@+id/menu_item_dropbox"
    android:title="@string/dropbox_title"
    android:showAsAction="never"
    />

</menu>
